--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,10 @@
   "builds": [
     {
       "src": "steam/wsgi.py",
-      "use": "@vercel/python"
+      "use": "@vercel/python",
+      "config": {
+        "requirements": "requirements.txt"
+      }
     }
   ],
   "routes": [
