some config changed

--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,8 @@
       "src": "steam/wsgi.py",
       "use": "@vercel/python",
       "config": {
+        "maxLambdaSize": "15mb",
+        "pythonVersion": 3.9,
         "requirements": "requirements.txt"
       }
     }
