--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,49 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "*"
+django = "==4.2.1"
+asgiref = "==3.6.0"
+attrs = "==23.1.0"
+automat = "==22.10.0"
+"backports.zoneinfo" = "==0.2.1"
+beautifulsoup4 = "==4.12.2"
+certifi = "==2022.12.7"
+cffi = "==1.15.1"
+charset-normalizer = "==3.1.0"
+constantly = "==15.1.0"
+cryptography = "==40.0.2"
+cssselect = "==1.2.0"
+filelock = "==3.12.0"
+hyperlink = "==21.0.0"
+idna = "==3.4"
+incremental = "==22.10.0"
+itemadapter = "==0.8.0"
+itemloaders = "==1.1.0"
+jmespath = "==1.0.1"
+lxml = "==4.9.2"
+parsel = "==1.8.1"
+protego = "==0.2.1"
+pyasn1 = "==0.5.0"
+pyasn1-modules = "==0.3.0"
+pycparser = "==2.21"
+pydispatcher = "==2.0.7"
+pyopenssl = "==23.1.1"
+pysnooper = "==1.1.1"
+queuelib = "==1.6.2"
+requests = "==2.30.0"
+requests-file = "==1.5.1"
+service-identity = "==21.1.0"
+six = "==1.16.0"
+soupsieve = "==2.4.1"
+sqlparse = "==0.4.4"
+tldextract = "==3.4.1"
+twisted = "==22.10.0"
+twisted-iocpsupport = "==1.0.3"
+typing-extensions = "==4.5.0"
+tzdata = "==2023.3"
+urllib3 = "==2.0.2"
+w3lib = "==2.1.1"
+"zope.interface" = "==6.0"
 
 [dev-packages]
 
