--- a/Pipfile
+++ b/Pipfile
@@ -41,7 +41,7 @@ soupsieve = "==2.4.1"
 sqlparse = "==0.4.4"
 tldextract = "==3.4.1"
 twisted = "==22.10.0"
-twisted-iocpsupport = "==1.0.3"
+#twisted-iocpsupport = "==1.0.3"
 typing-extensions = "==4.5.0"
 tzdata = "==2023.3"
 urllib3 = "==2.0.2"
